# pylamarzocco

./: .coveragerc  .gitignore  LICENSE  README.md  authlib_cloud_client.py  example.py  pyproject.toml  requirements.txt  requirements_test.tx  requirements_tests.txt  run.py  setup.py
.github/workflows/: pypi.yaml
TBD/devices/: _thing.py
docs/: cloud_commands.md  remote_rest.md  websockets.md
docs/legacy/: bluetooth_characteristics.md
lmcloud/: __init__.py  client_bluetooth.py  client_cloud.py  client_local.py  const.py  credentials.py  exceptions.py  helpers.py  lm_bluetooth.py  lm_device.py  lm_grinder.py  lm_iot_device.py  lm_local.py  lm_machine.py  lmbluetooth.py  lmcloud.py  lmlocalapi.py  models.py
pylamarzocco/: __init__.py  client_bluetooth.py  client_cloud.py  client_local.py  const.py  exceptions.py  helpers.py  lm_device.py  lm_grinder.py  lm_machine.py  models.py  util.py
pylamarzocco/clients/: __init__.py  _bluetooth.py  _cloud.py  bluetooth.py  cloud.py  local.py
pylamarzocco/devices/: __init__.py  _grinder.py  _machine.py  _thing.py  base.py  machine.py  thing.py
pylamarzocco/legacy/: __init__.py  exceptions.py  helpers.py  models.py
pylamarzocco/legacy/clients/: cloud.py  local.py
pylamarzocco/legacy/devices/: base.py  grinder.py
pylamarzocco/models/: __init__.py  _authentication.py  _bluetooth.py  _config.py  _general.py  _schedule.py  _statistics.py  _update.py  authentication.py  config.py  general.py  schedule.py  statistics.py
pylamarzocco/util/: __init__.py  _authentication.py  _generic.py  _websocket.py
response_samples/: machine_config.json
src/: client_cloud.py  helpers.py
tests/: __init__.py  conftest.py  test_authentication_utils.py  test_bluetooth.py  test_bluetooth_client.py  test_bluetooth_client_comprehensive.py  test_bluetooth_dashboard.py  test_cloud_client.py  test_cloud_client_comprehensive.py  test_constants.py  test_devices_machine.py  test_devices_thing.py  test_exceptions.py  test_grinder.py  test_machine.py  test_models.py  test_models_additional.py  test_models_comprehensive.py  test_status_snapshot.py  test_utility_functions.py  test_websocket.py  test_websocket_details.py  test_websocket_edge_cases.py  test_websocket_message_handling.py  test_websocket_utils.py  test_websocket_utils_comprehensive.py
tests/__snapshots__/: test_bluetooth_dashboard.ambr  test_cloud_client.ambr  test_grinder.ambr  test_machine.ambr  test_models.ambr  test_websocket.ambr
tests/fixtures/: config-micra.json  firmware.json
tests/fixtures/grinder/: config.json  dashboard_pico.json  dashboard_swan.json
tests/fixtures/machine/: config.json  config_micra.json  dashboard_gs3av.json  dashboard_micra.json  dashboard_mini.json  dashboard_minir.json  dashboard_pico.json  dashboard_strada.json  dashboard_strada_profile.json  dashboard_stradax.json  firmware.json  schedule.json  schedule_micra_new.json  schedule_strada.json  schedule_ws.json  settings.json  settings_micra.json  settings_strada.json  statistics.json
tests/legacy/: __init__.py  conftest.py  test_bluetooth.py  test_grinder.py  test_machine.py  test_websocket.py
tests/legacy/__snapshots__/: test_machine.ambr  test_websocket.ambr
tests/legacy/fixtures/machine/: config-mini-old.json  config-mini.json  config.json  counters.json
