[tool.poetry]
name        = "pylamarzocco"
version     = "1.2.3"
license     = "MIT"
description = "A Python implementation of the new La Marzocco API"
readme      = "README.md"
authors     = ["Josef Zweck <24647999+zweckj@users.noreply.github.com>"]
maintainers = ["Josef Zweck <24647999+zweckj@users.noreply.github.com>"]
homepage = "https://github.com/zweckj/pylamarzocco"
repository = "https://github.com/zweckj/pylamarzocco"
documentation = "https://github.com/zweckj/pylamarzocco"
keywords = ["La Marzocco", "lamarzocco", "api", "async", "client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
packages = [{include = "pylamarzocco"}]


[tool.poetry.dependencies]
python = "^3.12"
httpx = ">=0.16.1"
websockets = ">=11.0.2"
bleak = ">=0.20.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
coverage = {version = "7.6.7", extras = ["toml"]}
pytest = "8.3.3"
pytest-asyncio = "0.24.0"
pytest-cov = "6.0.0"

[tool.coverage.report]
show_missing = true
fail_under = 50

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["spotifyaio"]