[project]
name = "pylamarzocco"
version = "1.2.7"
license = {text = "MIT License"}
description = "A Python implementation of the new La Marzocco API"
readme = "README.md"
authors = [{name = "Josef Zweck", email = "24647999+zweckj@users.noreply.github.com"}]
maintainers = [{name = "Josef Zweck", email = "24647999+zweckj@users.noreply.github.com"}]
keywords = ["La Marzocco", "lamarzocco", "api", "async", "client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "bleak >= 0.20.2",
    "httpx >= 0.27.2",
    "websockets >= 13.1",
]
requires-python = "~= 3.12"

[project.urls]
Homepage = "https://github.com/zweckj/pylamarzocco"
Repository = "https://github.com/zweckj/pylamarzocco"
Documentation = "https://github.com/zweckj/pylamarzocco"

[project.optional-dependencies]
dev = [
    "covdefaults == 2.3.0",
    "coverage == 7.6.7",
    "syrupy == 4.7.2",
    "pytest == 8.3.3",
    "pytest-asyncio == 0.24.0",
    "pytest-cov == 6.0.0",
]
