[project]
name = "pylamarzocco"
version = "2.0.2"
license = { text = "MIT" }
description = "A Python implementation of the La Marzocco API"
readme = "README.md"
authors = [
    { name = "Josef Zweck", email = "24647999+zweckj@users.noreply.github.com" },
]
maintainers = [
    { name = "Josef Zweck", email = "24647999+zweckj@users.noreply.github.com" },
]
keywords = ["La Marzocco", "lamarzocco", "api", "async", "client"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.12",
]
dependencies = ["bleak >= 0.20.0", "aiohttp >= 3.8", "mashumaro >= 3.0"]
requires-python = ">= 3.12"

[project.urls]
Homepage = "https://github.com/zweckj/pylamarzocco"
Repository = "https://github.com/zweckj/pylamarzocco"
Documentation = "https://github.com/zweckj/pylamarzocco"

[project.optional-dependencies]
dev = [
    "covdefaults == 2.3.0",
    "coverage == 7.6.7",
    "syrupy == 4.7.2",
    "pytest == 8.3.3",
    "pytest-asyncio == 0.24.0",
    "pytest-cov == 6.0.0",
    "aioresponses == 0.7.7",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
